$Id$                       -*-text-*-


Revision history for Net::DNS               
=============================
*** NOT RELEASED YET

Bug rt.cpan.org #34510
  Buggy setting of "Recursion too deep, aborted" corrected.
  

Feature

  Added the name of the incoming socket ($socket->sockethost) as an argument
  into the ReplyHandler

Feature t/08-online.t and t/10-recurse.t

  In particular environments a query for a.t. will resolve and or
  middleboxes will replace DNS packet content for queries to the root.
  A bunch of test is skipped when this (broken) environment is
  detected.
  


Feature/Bug rt.cpan.org #22019 

  The initial fix for rt 22019 was to strip a trailing dot from all
  attributes that where povided as argument for the
  Net::DNS::RR::new_from_hash function.  We have introduced
  Net::DNS::stripdot, a function that will strip the dots of domain
  names, taking into account possible escapes (e.g. labels like
  foo\\\..).  As a side effect the new_from_string method will now
  convert possible spaces that are not trapped by some of the
  new_from_string functions and convert them to \032 escapes.

  For information: The internal storage of domain names is using
  presentation format without trailing dots. 



Bug
  @EXPORT and @EXPORT_OK moved to a BEGIN block so that Net::DNS::SEC 
  can make use of exported functions


Feature/Bug

  The Notify handler introduced in 0.63 did not set the OPCODE on the
  reply appropriately. This has been solved generically by allowing the
  "Headermask" that is returned as 4th element by the reply or notify
  handler in the nameserver also allows for the opcode to be set.
  e.g. as in return ("NXDOMAIN",[],[],[],{ opcode => "NS_NOTIFY_OP" }
  );


*** 0.63, 8 Feb 2008

This version contains a Security Fix.

Feature NotifyHandler in Nameserver
			
  The NotifyHandler is a new attribute to the nameserver used in the
  same way as the ReplyHandler except that it is executed when the